fixed text and spacing issues

--- a/src/sass/_client-section.scss
+++ b/src/sass/_client-section.scss
@@ -5,11 +5,14 @@
 .steps-text {
   font-weight: 700;
   color: #292f32;
-  font-size: 20px;
+  font-size: 22px;
   text-align: left;
   margin-bottom: 5rem;
   @media screen and (min-width: 768px) {
     font-size: 35px;
+  }
+  @media screen and (min-width: 992px) {
+    width: 620px;
   }
 }
 
