--- a/src/sass/_leed-speed-section.scss
+++ b/src/sass/_leed-speed-section.scss
@@ -15,7 +15,7 @@
 .why-love-text {
   font-weight: 700;
   color: #292f32;
-  font-size: 25px;
+  font-size: 20px;
   @media screen and (min-width: 768px) {
     font-size: 40px;
   }
@@ -28,7 +28,7 @@
 
 .custom-card-container {
   top: 220px;
-  @media screen and (min-width: 992px) {
+  @media screen and (min-width: 1200px) {
     position: absolute;
   }
 }
