--- a/src/sass/_testimonials-section.scss
+++ b/src/sass/_testimonials-section.scss
@@ -75,7 +75,7 @@
 .clients-txt {
   font-weight: 700;
   color: white;
-  font-size: 22px;
+  font-size: 20px;
   text-align: center;
   @media screen and (min-width: 768px) {
     font-size: 40px;
